test/input/negative/inline_nested.ls
type Document = {
    person: {
        name: string,
        email: int
    }
}
